<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.fragments.InformationFragment"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >



        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_130sdp"
            android:src="@drawable/top_banner_info_screen"
            android:scaleType="fitXY"
            />
<View
    android:layout_width="match_parent"
    android:layout_height="@dimen/_5sdp"
    android:background="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:text="@string/info_about_kaisan"
            android:textSize="@dimen/_16sdp"
            android:layout_gravity="fill_horizontal"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/line"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:text="@string/about"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/grey"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/about_text"
            android:justificationMode="inter_word"
            android:textSize="@dimen/_14sdp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:text="@string/visusal"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/grey"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:text="@string/visual_text"
            android:justificationMode="inter_word"
            android:textSize="@dimen/_14sdp"
            />



        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            android:src="@drawable/pic_info"
            android:layout_marginTop="@dimen/_20sdp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:visibility="gone"
            android:background="#d8d8d8"
            android:layout_marginTop="@dimen/_20sdp"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:id="@+id/terms"
            android:visibility="gone"
            android:text="TERMS OF USE"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Version 0.0.2"
            android:layout_marginTop="@dimen/_20sdp"
            android:textSize="@dimen/_14sdp"
            android:visibility="gone"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            />



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_15sdp"
                android:src="@drawable/ultra_pic"
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:layout_marginLeft="@dimen/_20sdp"
                />
            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/tilism_icon_launch"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/_20sdp"
                />




        </RelativeLayout>
    </LinearLayout>


</ScrollView>